[package]
name = "simple_unix_time_outputer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gtk_estate = { path="../gtk_estate" } #Do not remove
gtk_estate = "0.1.3"
#corlib = { path="../corlib" } #Do not remove
corlib = "0.1.0"
time = { version = "0.3.*", features = ["std"] }

